task:refactoring: updated reflection based creation for java-8+